0.6.10/_sources/gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/plot_fast_ica.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/plot_fast_ica.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_fast_ica.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_fast_ica.py:


FastICA example
===============

.. GENERATED FROM PYTHON SOURCE LINES 14-15

Import the spectrochempy API package

.. GENERATED FROM PYTHON SOURCE LINES 15-17

.. code-block:: default

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 18-20

Load, prepare and plot the dataset
----------------------------------

.. GENERATED FROM PYTHON SOURCE LINES 22-23

Here we use a dataset from :cite:t:`jaumot:2005`

.. GENERATED FROM PYTHON SOURCE LINES 23-35

.. code-block:: default


    X = scp.read("matlabdata/als2004dataset.MAT")[-1]

    X.title = "absorbance"
    X.units = "absorbance"
    X.set_coordset(None, None)
    X.y.title = "elution time"
    X.x.title = "wavelength"
    X.y.units = "hours"
    X.x.units = "cm^-1"
    _ = X.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_001.png
   :alt: plot fast ica
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 36-41

Create and fit a FastICA object
-------------------------------

As argument of the object constructor we define log_level to ``"INFO"`` to
obtain verbose output during fit, and we set the number of component to use at 4.

.. GENERATED FROM PYTHON SOURCE LINES 41-45

.. code-block:: default


    ica = scp.FastICA(n_components=4)
    _ = ica.fit(X)








.. GENERATED FROM PYTHON SOURCE LINES 46-52

Get the mixing system and source spectral profiles
--------------------------------------------------

The mixing system :math:`A` and the source spectral profiles :math:`S^T` can
be obtained as follows (the Sklearn equivalents - also valid with Scpy - are
indicated as comments

.. GENERATED FROM PYTHON SOURCE LINES 52-56

.. code-block:: default


    A = ica.A  # or model.transform()
    St = ica.St  # or model.mixing.T








.. GENERATED FROM PYTHON SOURCE LINES 57-58

Plot them

.. GENERATED FROM PYTHON SOURCE LINES 58-63

.. code-block:: default



    _ = A.T.plot(title="Mixing System", colormap=None)
    _ = St.plot(title="Sources spectral profiles", colormap=None)




.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_002.png
         :alt: Mixing System
         :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_002.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_003.png
         :alt: Sources spectral profiles
         :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_003.png
         :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 65-69

Reconstruct the dataset
-----------------------

The dataset can be reconstructed from these matrices and the mean:

.. GENERATED FROM PYTHON SOURCE LINES 69-73

.. code-block:: default


    X_hat_a = scp.dot(A, St) + X.mean(dim=0).data
    _ = X_hat_a.plot(title=r"$\hat{X} = \bar{X} + A S^t$")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_004.png
   :alt: $\hat{X} = \bar{X} + A S^t$
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 74-75

Or using the transform() method:

.. GENERATED FROM PYTHON SOURCE LINES 75-78

.. code-block:: default

    X_hat_b = ica.inverse_transform()
    _ = X_hat_b.plot(title="$\hat{X} =$ ica.inverse_transform()")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_005.png
   :alt: $\hat{X} =$ ica.inverse_transform()
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_005.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 79-80

Finally, the quality of the reconstriction can be checked by `plotmerit()`

.. GENERATED FROM PYTHON SOURCE LINES 80-82

.. code-block:: default

    _ = ica.plotmerit(nb_traces=15)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_006.png
   :alt: FastICA plot of merit
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_006.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 83-85

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 85-87

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.308 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_fast_ica.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_fast_ica.py <plot_fast_ica.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_fast_ica.ipynb <plot_fast_ica.ipynb>`
